# ocrs-cjk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  README_ja.md  README_kr.md  README_zh-tw.md  README_zh.md  SECURITY.md
.cargo/: audit.toml
.githooks/: pre-push
.github/workflows/: ci.yml  security.yml
ocrs/: Cargo.toml
ocrs-cli/: Cargo.toml
ocrs-cli/src/: deskew.rs  doctor.rs  furigana.rs  main.rs  models.rs  output.rs  pdf.rs  post_correct.rs  table.rs
ocrs-cli/test-data/: format-json-expected.json
ocrs/examples/: hello_ocr.rs
ocrs/src/: cjk_text.rs  detection.rs  layout_analysis.rs  lib.rs  preprocess.rs  recognition.rs  text_items.rs  wasm_api.rs
tasks/: lessons.md  todo.md
tools/: download-models.py  extract-alphabet.py  test-e2e-cjk.sh  test-e2e.py
