[package]
name = "ocrs-cjk-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.84"
authors = ["Robert Knight", "kent-tokyo"]
description = "CLI for ocrs-cjk: CJK text extraction, searchable PDF, hOCR/ALTO/JSON output."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/kent-tokyo/ocrs-cjk"
repository = "https://github.com/kent-tokyo/ocrs-cjk"
keywords = ["ocr", "cjk", "cli", "pdf", "image"]
categories = ["command-line-utilities", "computer-vision"]

[dependencies]
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "webp"] }
png = "0.18.1"
serde_json = "1.0.149"
rten = { workspace = true }
rten-imageproc = { workspace = true }
rten-tensor = { workspace = true }
ocrs-cjk = { path = "../ocrs", version = "0.1.0", features = ["rten"] }
lexopt = "0.3.2"
url = "2.5.4"
anyhow = "1.0.102"

[features]
# Support loading custom models in ONNX format
onnx = ["ocrs-cjk/onnx"]
# Support reading images from system clipboard
clipboard = ["arboard"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = "3.3.0"
home = "0.5.12"
arboard = { version = "3", optional = true }
lopdf = "0.34"

[[bin]]
name = "ocrs"
path = "src/main.rs"

# Disable documentation for ocrs binary to avoid a filename conflict in
# `target/doc/` with docs for the ocrs library crate.
doc = false
