[package]
name = "ocrs-cjk"
version = "0.1.0"
edition = "2021"
rust-version = "1.84"
authors = ["Robert Knight", "kent-tokyo"]
description = "Pure Rust, offline CJK OCR: PaddleOCR detection, hOCR/ALTO/JSON, WASM-safe."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/kent-tokyo/ocrs-cjk"
repository = "https://github.com/kent-tokyo/ocrs-cjk"
keywords = ["ocr", "cjk", "onnx", "wasm", "pdf"]
categories = ["computer-vision", "multimedia::images", "text-processing"]

[dependencies]
anyhow = "1.0.102"
rten = { workspace = true }
rten-imageproc = { workspace = true }
rten-tensor = { workspace = true }
thiserror = "2.0.18"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.12.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# nb. When changing this, make sure the version of wasm-bindgen-cli installed
# in CI etc. is in sync.
wasm-bindgen = "0.2.93"

[dev-dependencies]
fastrand = "2.4.1"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "webp"] }
lexopt = "0.3.2"
rten = { workspace = true }

[features]
default = ["export-wasm", "rten"]
# Enables wasm API (i.e. exposes ocrs API to JS)
export-wasm = []
# Enables loading custom models in ONNX format
onnx = ["rten/onnx_format"]
# Enables loading custom models in rten format
rten = ["rten/rten_format"]

[lib]
crate-type = ["lib", "cdylib"]
